fix: rename bot name

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,7 +13,7 @@ defaults:
 
 jobs:
   merge:
-    if: ${{ github.actor == 'homebrew-tap-pr-writer-for-tmknom[bot]'}}
+    if: ${{ github.actor == 'pr-writer-for-tmknom[bot]'}}
     runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions:
